Solved part 1 from exams up to 2015

--- a/Exams/2017-01-26.md
+++ b/Exams/2017-01-26.md
@@ -1,4 +1,4 @@
-# Exame 2017/2018 - Recurso
+# Exame 2016/2017 (26/01)
 
 ## Parte 1
 
@@ -114,4 +114,9 @@ loadMore.addEventListener("click", function() {
 
 4. c)
 
+`//author[country="England"]/book[@year]`
+
 4. d)
+
+`///book[@type="Novel"]/parent::author`
+
