Submitted some corrections to exams solutions

--- a/Exams/2017-01-26.md
+++ b/Exams/2017-01-26.md
@@ -22,9 +22,9 @@
 
 1. a)
 
-| R1 | R2 | R3 | R4 | R5 | R6 |
-|----|----|----|----|----|----|
-| 2  | 4  | 3  | 4  | 3  | 3  |
+| R1         | R2         | R3         | R4         | R5         | R6         |
+|------------|------------|------------|------------|------------|------------|
+| 0, 1, 0, 1 | 0, 1, 1, 2 | 0, 1, 1, 1 | 0, 1, 1, 2 | 0, 1, 0, 2 | 0, 0, 0, 3 |
 
 1. b)
 
@@ -36,7 +36,7 @@
 
 | Buy Bread | Learn Guitar | Pay Bills | Wash Car |
 |-----------|--------------|-----------|----------|
-| red       | blue         | blue      | magenta  |
+| cyan      | blue         | red       | red      |
 
 2. a)
 
@@ -114,9 +114,9 @@ loadMore.addEventListener("click", function() {
 
 4. c)
 
-`//author[country="England"]/book[@year]`
+`//author[@country="England"]/book/@year/number()`
 
 4. d)
 
-`///book[@type="Novel"]/parent::author`
+`//book[@type="Novel"]/../@name/string()`
 
